--- a/public/admin.html
+++ b/public/admin.html
@@ -6,55 +6,68 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <style>
     body{font-family:sans-serif;margin:40px;}
-    table{border-collapse:collapse;width:100%;}
-    th,td{border:1px solid #ccc;padding:10px 12px;text-align:left;vertical-align:top;}
-    th{background:#eee;font-size:16px;white-space:nowrap;word-break:keep-all;} /* ← 上の項目は横並び固定 */
-    td{font-size:18px;line-height:1.25;}
+  table{border-collapse:collapse;width:100%;}
+  th,td{border:1px solid #ccc;padding:10px 12px;text-align:left;vertical-align:top;}
+  th{background:#eee;font-size:16px;white-space:nowrap;word-break:keep-all;}
+  td{font-size:18px;line-height:1.25;}
 
-    /* ボタン高さUP（ズーム防止も兼ねる） */
     button{
-      margin:10px 0;padding:12px 16px;
-      font-size:18px;min-height:56px;cursor:pointer;
-      border-radius:10px;border:1px solid #bbb;background:#f7f7f7;
-    }
+    margin:10px 0;padding:12px 16px;
+    font-size:18px;min-height:56px;cursor:pointer;
+    border-radius:10px;border:1px solid #bbb;background:#f7f7f7;
+  }
 
-    .controls{display:grid;grid-template-columns:auto 1fr;gap:8px 12px;align-items:center;margin:8px 0 16px;}
-    .row{display:flex;gap:12px;align-items:center;flex-wrap:wrap;}
-    .cols-list{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:4px 14px;margin-top:8px;max-height:260px;overflow:auto;padding:8px;border:1px solid #ddd;border-radius:6px;background:#fafafa;}
-    .muted{color:#666;font-size:14px;white-space:pre-line;}
-    .ship-preview{font-weight:bold;}
+  /* 横文字・改行なし（ネコポス／宅急便ボタン用） */
+  .nowrap-btn {
+    white-space: nowrap;
+    word-break: keep-all;
+    writing-mode: horizontal-tb;
+  }
 
-    /* 入力16px以上でiOSズーム防止 */
-    input[type="text"]{padding:10px 12px;font-size:18px;border:1px solid #bbb;border-radius:10px;}
+  .controls{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap:12px;
+    align-items:start;
+    margin:8px 0 16px;
+  }
+  .col{display:flex;flex-direction:column;gap:6px;}
 
-    /* 行チェックは残す＆約2倍 */
-    .row-check{transform:scale(1.8);transform-origin:left top;margin:8px 0;}
+  .cols-list{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:4px 14px;margin-top:8px;max-height:260px;overflow:auto;padding:8px;border:1px solid #ddd;border-radius:6px;background:#fafafa;}
+  .muted{color:#666;font-size:14px;white-space:pre-line;}
+  .ship-preview{font-weight:bold;}
 
-    /* ここがキモ：1行は必ず横書き。任意改行は <br> のみ */
-    .hline{display:inline-block;white-space:nowrap;word-break:keep-all;}
-    .center{text-align:center;}
+  input[type="text"]{padding:10px 12px;font-size:18px;border:1px solid #bbb;border-radius:10px;}
+
+  .row-check{transform:scale(1.8);transform-origin:left top;margin:8px 0;}
+
+  .hline{display:inline-block;white-space:nowrap;word-break:keep-all;}
+  .center{text-align:center;}
   </style>
 </head>
 <body>
   <h1>注文データ一覧</h1>
 
+  <!-- === 並び替え後のボタン群 === -->
   <div class="controls">
-    <div class="row">
-      <button id="csvSelectedBtn">選択行をCSVダウンロード</button>
+    <!-- 左：☑︎→CSV / allCSV -->
+    <div class="col">
+      <button id="csvSelectedBtn">☑︎→CSV</button>
+      <button id="csvAllBtn">allCSV</button>
     </div>
-    <div class="row">
-      <button id="toNekoposBtn">選択行をネコポスに変換</button>
+
+   <div class="col">
+  <button id="toNekoposBtn" class="nowrap-btn">☑︎→ネコポス</button>
+  <button id="toHatsubaraiBtn" class="nowrap-btn">☑︎→宅急便</button>
+</div>
+
+    <!-- 右：2025 / 出荷予定日：［入力］ → 未設定 -->
+    <div class="col">
       <button id="shipYearBtn" title="クリックで年を変更">2025</button>
-      <label>出荷予定日(MMDD)：<input type="text" id="shipMmdd" placeholder="例: 1225" maxlength="4" inputmode="numeric" pattern="[0-9]*"></label>
-      <span>→ <span id="shipPreview" class="ship-preview">未設定</span></span>
-    </div>
-    <div class="row">
-      <button id="csvAllBtn">一括CSVダウンロード</button>
-    </div>
-    <div class="row">
-      <button id="toHatsubaraiBtn">選択行を発払いに変換</button>
-      <span class="muted">A=ネコポス
-0=発払い</span>
+      <div>
+        <label>出荷予定日：<input type="text" id="shipMmdd" placeholder="例: 1225" maxlength="4" inputmode="numeric" pattern="[0-9]*"></label>
+        <span>→ <span id="shipPreview" class="ship-preview">未設定</span></span>
+      </div>
     </div>
   </div>
 
@@ -69,41 +82,28 @@
   <table id="ordersTable">
     <thead>
       <tr>
-        <!-- ヘッダーは横並び・改行なし -->
-        <th>選択</th>
-        <th>ID</th>
-        <th>名前</th>
-        <th>住所</th>
-        <th>電話</th>
-        <th>配達希望日</th>
-        <th>配達希望時間</th>
-        <th>出荷予定日</th>
-        <th>登録日</th>
-        <th>発送種別</th>
+        <th>選択</th><th>ID</th><th>名前</th><th>住所</th><th>電話</th>
+        <th>配達希望日</th><th>配達希望時間</th><th>出荷予定日</th><th>登録日</th><th>発送種別</th>
       </tr>
     </thead>
     <tbody></tbody>
   </table>
 
   <script type="module">
-    // ===== パスワードガード =====
     (function(){
       const pass = sessionStorage.getItem('admin-pass') || prompt('パスワードを入力してください');
       if (pass !== 'kohakurira') { alert('不正アクセス検知：トップページに戻ります'); location.href = '/'; }
       else { sessionStorage.setItem('admin-pass', pass); }
     })();
 
-    // ===== グローバル =====
     let ORDERS = [];
     let CSV_HEADERS = [];
     let shipYear = new Date().getFullYear();
     let shipMmdd = "";
 
-    // ===== ユーティリティ =====
     const esc = s => String(s??"").replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
     const onlyDigits = s => (s||"").replace(/\D/g,"");
 
-    // 5文字超のときだけ5文字ごとに強制改行（横書き1行＝.hline）
     function brIfLongEveryN(str, n=5){
       const s = String(str||"");
       if (!s) return "";
@@ -112,32 +112,24 @@
       for(let i=0;i<s.length;i+=n) parts.push(`<span class="hline">${esc(s.slice(i,i+n))}</span>`);
       return parts.join("<br>");
     }
-
-    // 名前：姓 ↵ 名（横書き固定）
     function formatName(last, first){
       const l = (last||"").trim();
       const f = (first||"").trim();
       if (!l && !f) return "-";
       return `<span class="hline">${esc(l)}</span><br><span class="hline">${esc(f)}</span>`;
     }
-
-    // 住所：都道府県 / 市区町村 / 番地 / 建物名（各段は5文字超のみ分割）
     function formatAddress(pref, city, addr, bld){
       return [pref, city, addr, bld]
         .map(part => part ? brIfLongEveryN(part, 5) : "")
         .filter(Boolean)
         .join("<br>");
     }
-
-    // 電話：3/4/4 の3行（横書き固定）
     function formatPhone(phone){
       const d = onlyDigits(phone);
       if (!d) return "-";
       const a = d.slice(0,3), b = d.slice(3,7), c = d.slice(7,11);
       return [a,b,c].filter(Boolean).map(x=>`<span class="hline">${esc(x)}</span>`).join("<br>");
     }
-
-    // 日付：YYYY ↵ MM/DD（横書き固定）
     function toYAndMdHtml(dateLike){
       if (!dateLike) return "-";
       const dt = new Date(dateLike);
@@ -147,16 +139,12 @@
       const d = String(dt.getDate()).padStart(2,"0");
       return `<span class="hline">${y}</span><br><span class="hline">${m}/${d}</span>`;
     }
-
-    // 時間帯：1820 → 18 ↵ 20（横書き固定）
     function formatTimeSlotHtml(slot){
       if (!slot) return "-";
       const s = String(slot).replace(/\D/g,"");
       if (s.length===4) return `<span class="hline">${esc(s.slice(0,2))}</span><br><span class="hline">${esc(s.slice(2,4))}</span>`;
       return `<span class="hline">${esc(s)}</span>`;
     }
-
-    // MMDD -> "YYYY/MM/DD"
     function mmddToYmd(year, mmdd){
       const m = (mmdd || "").trim();
       if (!/^\d{4}$/.test(m)) return "";
@@ -177,7 +165,6 @@
       document.querySelectorAll('td[data-col="ship"]').forEach(td=> td.innerHTML = html);
     }
 
-    // ===== CSVヘッダ =====
     async function loadCsvHeaders() {
       const res = await fetch('/api/orders/csv/headers');
       if (!res.ok) throw new Error('CSVヘッダ取得に失敗');
@@ -196,7 +183,6 @@
       });
     }
 
-    // ===== 注文データ =====
     async function loadOrders(){
       const res = await fetch("/api/orders");
       if (!res.ok) throw new Error("データ取得に失敗しました");
@@ -237,7 +223,6 @@
       refreshShipPreview();
     }
 
-    // ===== 変換ボタン =====
     function setSelectedShipType(to){
       const ids = new Set(
         Array.from(document.querySelectorAll('.row-check:checked')).map(cb => Number(cb.dataset.id))
@@ -251,7 +236,6 @@
     document.getElementById('toNekoposBtn').addEventListener('click', ()=> setSelectedShipType('A'));
     document.getElementById('toHatsubaraiBtn').addEventListener('click', ()=> setSelectedShipType('0'));
 
-    // ===== 出荷予定日 =====
     document.getElementById('shipYearBtn').addEventListener('click', ()=>{
       const y = prompt('出荷予定年を4桁で入力してください', String(shipYear));
       if (!y) return;
@@ -265,7 +249,6 @@
       refreshShipPreview();
     });
 
-    // ===== CSV系（既存） =====
     function getSelectedColumnIds() {
       return Array.from(document.querySelectorAll('#colsContainer input[type="checkbox"]:checked'))
         .map(cb => cb.dataset.id);
@@ -327,7 +310,6 @@
     }
     document.getElementById('csvAllBtn').addEventListener('click', downloadAllCsv);
 
-    // 初期表示
     (async ()=>{
       try {
         await loadCsvHeaders();
