--- a/public/admin.html
+++ b/public/admin.html
@@ -82,8 +82,8 @@
   <table id="ordersTable">
     <thead>
       <tr>
-        <th>選択</th><th>ID</th><th>名前</th><th>住所</th><th>電話</th>
-        <th>配達希望日</th><th>配達希望時間</th><th>出荷予定日</th><th>登録日</th><th>発送種別</th>
+        <th>選択</th><th>発送種別</th><th>名前</th><th>住所</th><th>電話</th>
+        <th>配達希望日</th><th>配達希望時間</th><th>出荷予定日</th><th>登録日</th>
       </tr>
     </thead>
     <tbody></tbody>
