--- a/public/admin.html
+++ b/public/admin.html
@@ -67,8 +67,8 @@
 
     <!-- 中：☑︎→ネコポス / ☑︎→宅急便 -->
     <div class="col">
-      <button id="toNekoposBtn" class="nowrap-btn">☑︎→ネコポス</button>
-      <button id="toHatsubaraiBtn" class="nowrap-btn">☑︎→宅急便</button>
+      <button id="toNekoposBtn" class="nowrap-btn">☑︎→Aネコポス</button>
+      <button id="toHatsubaraiBtn" class="nowrap-btn">☑︎→0宅急便</button>
     </div>
 
     <!-- 右：2025 / 出荷予定日：［入力］ → 未設定 -->
